--- a/.env
+++ b/.env
@@ -1,8 +1,4 @@
-DB_HOST= "mongodb://localhost:27017"
+DB_HOST= "localhost:5000"
 DB_DATABASE = "chat"
 
 API_PORT = 5000
-
-
-# validação do token
-SECRET=mysecret
