--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "chat",
   "version": "1.0.0",
   "description": "chat with node.js and mongodb",
-  "main": "index.js",
+  "main": "node ./bin/server.js",
   "scripts": {
     "start": "node ./bin/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
