--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DB_HOST= "localhost:5000"
+DB_HOST= "mongodb+srv://diegohrld:rMpF9lfgrIaTkF94@chat.ukty9cx.mongodb.net/"
 DB_DATABASE = "chat"
 
 API_PORT = 5000
